--- a/literature.bib
+++ b/literature.bib
@@ -378,11 +378,12 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint    = {https://doi.org/10.1201/b17668},
 }
 
-@InProceedings{Nielson1993,
-  author = {Jakob Nielsen},
-  title  = {Response Times: The 3 Important Limits},
-  year   = {1993},
-  eprint = {https://www.nngroup.com/articles/response-times-3-important-limits/},
+@Book{Nielson1993,
+  author    = {Nielsen, Jakob},
+  publisher = {Morgan Kaufmann},
+  title     = {Usability engineering},
+  year      = {1994},
+  eprint    = {https://www.nngroup.com/articles/response-times-3-important-limits/},
 }
 
 @InProceedings{Lion2022,
@@ -544,6 +545,16 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title       = {Recommendation for key management},
   year        = {2006},
   eprint      = {https://doi.org/10.6028/NIST.SP.800-57pt1r5},
+}
+
+@InProceedings{Shang2021,
+  author    = {Shang, Siqi and Wu, Qihong and Wang, Tianyu and Shao, Zili},
+  booktitle = {Proceedings of the 26th Asia and South Pacific Design Automation Conference},
+  title     = {LiteIndex: Memory-Efficient Schema-Agnostic Indexing for JSON Documents in SQLite},
+  year      = {2021},
+  pages     = {435–440},
+  series    = {ASPDAC '21},
+  eprint    = {https://doi.org/10.1145/3394885.3431518},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
