--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -408,7 +408,7 @@ In both ways, the requirements of this thesis can not be met.
 A possible solution to fix this is the implementation and distribution of the \emph{Inverse Transparency} front-end as an app.
 This way, a secure session could be established among users and the shared secret could be securely stored in dedicated secure hardware storages which are not available in browsers.
 
-\section{Justification of hybrid encryption}
+\section{Evaluation}
 \label{sec:justification}
 The protocol designed in this thesis relies on hybrid encryption.
 The purpose of this section is the justification of this encryption technique.
