--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -305,6 +305,6 @@ If any of them fails the decryption must be aborted.
     In this case, the set of recipients can be arbitrary.
 \end{enumerate}
 If all those validations succeed the log can be trusted.
-A visualization of the decryption process can be found in \cref{app:encryption}
+A visualization of the decryption process can be found in \cref{app:decryption}
 
 \end{document}
