--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -253,6 +253,8 @@ Thus, a malicious data owner Eve can not introduce forged logs into the system.
 
 \section{Performance}
 \label{sec:evaluation-perf}
+
+\subsection{Encryption}
 As elaborated in the previous chapters, the designed and implemented protocol is based on hybrid encryption.
 Logs can therefore  be encrypted for multiple recipients.
 The symmetric key $k$ (which encrypts the log) must be encrypted for each receiver.
@@ -260,8 +262,7 @@ This implies that if a log is shared with $n$ users the key $k$ must be encrypte
 The encryption duration increases linearly with the number of recipients.
 This section aims to provide resilient measurements of those costs.
 
-
-\subsection{Methodology}
+\subsubsection{Methodology}
 The encryption times are measured for each library separately (ts-it-crypto, py-it-crypto, and go-it-crypto).
 The measurements are implemented as performance tests in each library.
 All of them follow the same principles.
@@ -271,13 +272,13 @@ However, the number of recipients changes during different tests.
 For a fixed number of recipients, a test is repeated $100$ times.
 The average of those runs is said to be the encryption duration for the number of recipients in the library under test.
 
-The performance tests were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} CPU (ARM64).
+The performance tests were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} CPU (ARM64) and 16 GB RAM..
 The Go library was compiled with Go 1.18.3\footnote{\url{https://go.dev/doc/devel/release}}.
 The Typescript package was compiled into Javascript using TSC 4.8.3\footnote{\url{https://www.typescriptlang.org/docs/handbook/compiler-options.html}}. 
 It was then executed by the Node.js version 18.12.1\footnote{\url{https://nodejs.org/ca/blog/release/v18.12.1/}} which is built upon the V8 engine 10.2.154.15\footnote{\url{https://v8.dev/}}.
 The Python tests were run under Python 3.9.6\footnote{\url{https://www.python.org/downloads/release/python-396/}} using the CPython\footnote{\url{https://github.com/python/cpython}} interpreter.
 
-\subsection{Results}
+\subsubsection{Results}
 The results of all three libraries are illustrated in \cref{fig:performance}.
 It shows the encryption duration in milliseconds for a different number of recipients.
 In general, one can observe that the Go implementation is the fastest library.
@@ -309,13 +310,122 @@ This proves that a data owner can share his logs with up to 170 users without no
 Hence, the designed protocol can be used in practice.
 
 
-
-
 \begin{figure}[ht]
-    \includegraphics[scale=0.3]{../img/07/performance_tests.jpg}
+    \includegraphics[scale=0.6]{../img/07/performance.png}
     \centering
     \caption[Encryption duration]{This figure visualizes the encryption duration of the different libraries in milliseconds. The same log data was encrypted for a different number of recipients.}
     \label{fig:performance}
 \end{figure}
+
+\subsection{Toolchain}
+The \emph{Inverse Transparency Toolchain} was adopted to support encrypted logs.
+Once a user logs in to the \emph{Display} component, all encrypted logs of this particular user are fetched from the \emph{Safekeeper}, decrypted and visualized.
+Compared to the legacy solution, this implementation introduces an additional encryption layer.
+It is assumed that this degrades the performance of fetching and visualizing logs.
+This section provides measurements of 
+1) the legacy toolchain that does not rely on encryption and
+2) the updated toolchain that handles encrypted logs.
+Those measurements illustrate the performance differences of the toolchain when storing encrypted logs.
+
+
+\subsubsection{Methodology}
+
+The measurements were conducted within the \emph{Display} and the \emph{Safekeeper} component.
+They reflect the passed time from starting an API call to fetch logs until those logs are ready for visualization.
+This time can be divided into three sections: Database queries, server computation time and client computation time.
+First, the database queries reflect the time the server needs to extract the logs and other information from the database.
+Second, the server computation is the time the server needs to resolve the API call besides the time for querying the database.
+For example, the legacy toolchain computes some metadata data over the returned logs and includes this data into the response.
+Third, the client computation time is the time needed by the client to process the fetched data until it is available for visualization.
+For example, the overview data must be computed by the front-end in the context encrypted logs.
+This is because this metadata can only be calculated once the logs are decrypted.
+Moreover, the client computation includes all tasks which are performed once the API call has finished.
+The time for decrypting logs is therefore also part of the client computation.
+
+The database queries are measured directly within the \emph{Safekeeper} component.
+The \emph{Display} component measures the time needed for the entire API call.
+To compute the server computation time, the database queries are subtracted from the duration of the entire API call.
+The client computation time is measured directly within the \emph{Display} component.
+
+To provide resilient measurements, the database always contains $1000$ logs for the logged-in user.
+The number of fetched and visualized logs changes during different tests.
+The test are run for $1$, $10$ and $100$ logs.
+For a fixed number of logs a test is repeated $100$ times.
+The presented numbers are the averages of those runs.
+All tests are run against the legacy toolchain and against the updated toolchain.
+The tests were executed within the development environment which was started using \verb|docker compose|.
+They were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} ARM64 CPU and 16 GB RAM.
+
+
+\subsubsection{Results}
+\cref{fig:perf-unencrypted} shows the results of the toolchain before the encryption layer was added.
+Overall, the legacy toolchain requires on average $142ms$ to fetch a single log, $148ms$ to fetch ten logs and $243ms$ to fetch one hundred logs.
+The server computation time increases when multiple logs are fetched.
+This is expected because the server computation time includes the transmission delay over the network.
+Furthermore, one can observe that the client computation time is very short.
+The main reason for this lies in the fact that the server performs all pre-computation steps which are needed to visualize the logs in the front-end.
+Hence, the front-end can directly visualize the logs without further computations.
+For example, the server fetches metadata from the database to provide the number of logs which were created within a specific tool.
+The database queries account for a big portion of the time needed to fetch logs from the server.
+There are two main reasons for this.
+First, the pre-computed data of the server requires multiple database queries.
+Second, the realized database schema requires a database join to resolve the identity of a user to a given access log.
+Thus, the measured database query times are higher in the legacy toolchain than in the updated toolchain.
+The time needed to query data from the database increases slightly when more logs are loaded from the server.
+This is expected since the database must resolve more data if more logs are requested.
+
+\begin{figure}[ht]
+    \includegraphics[scale=0.62]{../img/07/unencrypted.png}
+    \centering
+    \caption[Encryption duration]{This figure visualizes the measured times to download and process the logs in the previous toolchain that maintains unencrypted logs.}
+    \label{fig:perf-unencrypted}
+\end{figure}
+
+\cref{fig:perf-encrypted} shows the results of the updated toolchain including the encryption layer.
+Overall, the updated toolchain requires on average $77ms$ to fetch a single log, $106ms$ to fetch ten logs and $298ms$ to fetch one hundred logs.
+Those results are not expected because for a single log and for ten logs the encrypted toolchain is faster than the legacy toolchain.
+The reason for this lies in the pre-computation performed by the legacy toolchain resulting in multiple database queries.
+Moreover, the updated toolchain employs a simplified database design consisting of a single table that stores the encrypted logs.
+As described in ~\cref{sec:implemenation-safekeeper}, this table contains a JSON field.
+This field could be further improved to support efficient indexed lookups~\cite{Shang2021}.
+Querying the logs from this table is more efficient than querying logs in the old database scheme because only a single query without database joins is executed.
+Thus, the aggregated duration of all database queries is smaller in the updated toolchain compared to the legacy version.
+\cref{fig:perf-encrypted} illustrates that server computation times increase if multiple logs are fetched.
+Again, this is expected because it contains the transmission delay of the data sent over the network.
+The more data is transferred, the longer is the transmission delay.
+Compared to the legacy toolchain, the server computation time has increased.
+The size of an encrypted log is about $1600$ bytes.
+The size of an unencrypted log is $700$ bytes on average.
+The updated toolchain must transfer more data than the legacy version because encrypted logs introduce a memory overhead.
+Hence, the legacy toolchain requires less server computation time.
+Finally, the client computation time is higher in the updated toolchain.
+If the client fetches $100$ logs, their processing takes more than $114ms$.
+Compared to the very short processing times in the legacy version, this is a significant increase.
+There are two reasons for this.
+First, the received logs must be decrypted.
+Second, the decrypted logs are analyzed to provide metadata for the visualization in the front-end.
+In the legacy version this was computed by the server.
+Since the log data must be decrypted to compute this metadata, however, this computation was shifted to the client.
+The decryption of logs and their processing is therefore considered to be the bottleneck of the updated toolchain.
+If $100$ logs are fetched from the server, the updated toolchain is $40ms$ slower thant the legacy toolchain.
+This is a relative difference of $20\%$.
+
+This analysis delivers two major findings.
+First, the updated toolchain enables faster database queries due to the simplified database scheme.
+This implies that the legacy version is even slower if a small amount of logs are requested.
+Second, the handling of encrypted logs introduces a significant overhead on the client side if many logs are fetched.
+This bottleneck should be avoided by not fetching more than $100$ logs at once.
+Note that the front-end makes use of pagination.
+This analysis shows that the page size should not exceed 100 logs.
+If only 10 logs are loaded per page, the updated toolchain is even faster than the legacy version.
+
+\begin{figure}[ht]
+    \includegraphics[scale=0.63]{../img/07/encrypted.png}
+    \centering
+    \caption[Encryption duration]{This figure visualizes the measured times to download and process the logs in the updated toolchain that maintains encrypted logs.}
+    \label{fig:perf-encrypted}
+\end{figure}
+
+
 
 \end{document}
