moved ECDH-ES to design

--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -94,6 +94,7 @@ As the name suggests, the signature does not protect the unprotected header.
 The header contains information about the algorithm used to secure the application data.
 
 \subsection{JSON Web Encryption}
+\label{sec:jwe}
 JWE tokens represent encrypted data~\cite{JWE2015}.
 Multiple encryption algorithms can be used to encrypt the application data.
 They are defined in the JSON Web Algorithm (JWA) specification~\cite{JWA2015}.
